# agentic-memory-graph-engine

./: DISCLAIMER.md  Makefile  PLAN.md  README.md  SPEC.md  TASKS.md  pyproject.toml
examples/: meeting.json
memory/: constitution.md
src/amg/: cli.py  explain.py  graph.py  ingest.py
tests/: test_amg_cli.py
tests/fixtures/: meeting.json
