[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-memory-graph-engine"
version = "0.1.0"
description = "Agentic Memory Graph Engine CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
amg = "amg.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]
